--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 
                 </div>
                 <nav class="nav">
-                    <a class="nav__link" href="works.html">Работы</a>
+                    <a class="nav__link" href="elka.html">Елка</a>
                     <a class="nav__link" href="index.html">Обо мне</a>
                     <a class="nav__link" href="contacts.html">Контакты</a>
                     <a class="nav__link" href="https://www.dvfu.ru/" target="_blank">Сайт ДВФУ</a>
