--- a/elka.html
+++ b/elka.html
@@ -52,6 +52,8 @@
 
                     <button class="build-name">построить имя</button>
                     <a class="nav__link" href="index.html">Назад на главную</a>
+                    <a class="nav__link" href="document.pdf">Курсовая pdf</a>
+                    <a class="nav__link" href="document.tex">Файл tex</a>
                 </div>
             </div>
             <div class="row">
