--- a/elka.html
+++ b/elka.html
@@ -57,7 +57,7 @@
                 </div>
             </div>
             <div class="row">
-                <a class="link" href="screen.jpg">Смилуйтесь, пожалуйста, у меня не работал тимс до 15.30, тут скриншот</a>
+                <a class="link" href="screen.png">Смилуйтесь, пожалуйста, у меня не работал тимс до 15.30, тут скриншот</a>
                 <div id="canvas" style="width: 1024px; height: 512px; border: none; position: relative;">
                     <div id="tree" style="position: absolute;" draggable="false">
                         <img src="images/tree.png" width="300" height="500" draggable="false">
