--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <nav class="nav">
                     <a class="nav__link" href="elka.html">Работы</a>
                     <a class="nav__link" href="index.html">Обо мне</a>
-                    <a class="nav__link" href="contacts.html">Контакты</a>
+                    <a class="nav__link" href="contacts.html">Мой диплом</a>
                     <a class="nav__link" href="https://www.dvfu.ru/" target="_blank">Сайт ДВФУ</a>
                 </nav>
             </div>
