--- a/contacts.html
+++ b/contacts.html
@@ -39,6 +39,17 @@
         </div>
     </header>
  
+ <section class="intro">
+        <div class="container">
+            <img src="images/tree.png" width="300" height="500" draggable="false">
+                    <div class="social">
+                        <a class="social__link" href="https://vk.com/hallelujajula" target="_blank">
+                            <img src="images/vk.png" alt=" ">
+                        </a>
+                    </div>
+            
+        </div>
+    </section>
 
     
 </body> 
