--- a/contacts.html
+++ b/contacts.html
@@ -41,10 +41,10 @@
  
  <section class="intro">
         <div class="container">
-            <img src="images/tree.png" width="300" height="500" draggable="false">
+            <img src="images/работает.jpg" width="40" height="40" draggable="false">
                     <div class="social">
-                        <a class="social__link" href="https://vk.com/hallelujajula" target="_blank">
-                            <img src="images/vk.png" alt=" ">
+                        <a class="social__link" href="архив.zip" target="_blank">
+                            <img src="images/donw.png" width="20" height="20" alt=" ">
                         </a>
                     </div>
             
