--- a/contacts.html
+++ b/contacts.html
@@ -17,7 +17,7 @@
                 <div class="user">
                     
                     <div class="user__avatar">
-                        <img src="https://placehold.it/57/333" alt="">
+                        <img src="images/me.png" alt="">
                     </div>
                     <div class="user__FIO">
                         <div class="user__name">
@@ -32,7 +32,7 @@
                 <nav class="nav">
                     <a class="nav__link" href="works.html">Работы</a>
                     <a class="nav__link" href="index.html">Обо мне</a>
-                    <a class="nav__link" href="contacts.html">Контакты</a>
+                    <a class="nav__link" href="contacts.html">Мой диплом</a>
                     <a class="nav__link" href="https://www.dvfu.ru/" target="_blank">Сайт ДВФУ</a>
                 </nav>
             </div>
@@ -41,7 +41,7 @@
  
  <section class="intro">
         <div class="container">
-            <img src="/images/работает.jpg" width="100" height="100" draggable="false">
+            <img src="/images/работает.jpg" width="150" height="150" draggable="false">
                     <div class="social">
                         <a class="social__link" href="архив.zip" target="_blank">
                             <img src="/images/donw.png" width="40" height="40" alt=" ">
