--- a/contacts.html
+++ b/contacts.html
@@ -41,7 +41,7 @@
  
  <section class="intro">
         <div class="container">
-            <img src="/images/готово1.png" width="1200" height="1000" draggable="false">
+            <img src="готово1.png" width="1200" height="1000" draggable="false">
                     <div class="social">
                         <a class="social__link" href="архив.zip" target="_blank">
                             <img src="/images/donw.png" width="40" height="40" alt=" ">
