--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
                 </div>
                 <nav class="nav">
                     <a class="nav__link" href="video.html">Видео</a>
-                    <a class="nav__link" href="works.html">Работы</a>
+                    <a class="nav__link" href="elka.html">Работы</a>
                     <a class="nav__link" href="index.html">Обо мне</a>
-                    <a class="nav__link" href="contacts.html">Контакты</a>
+                    <a class="nav__link" href="contacts.html">Blender</a>
                     <a class="nav__link" href="https://www.dvfu.ru/" target="_blank">Сайт ДВФУ</a>
                 </nav>
             </div>
