--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                         Помимо ВКР я работаю в студенческом совете ДВФУ. Являлась руководителем таких мероприятий, как выпускные в 2018 и 2019 годах, организовывала адаптационные мероприятия для перворкурсников. Разрабатывала дизайн открыток, афиш, наклеек, календарей, баннеров и иной полиграфической продукции.
                         </p> 
                         <p>
-                        Занималась чем-то еще, надо придумать текст
+                        Опыт работы, надо придумать текст
                         </p> 
 
                     </div>
