--- a/blender.html
+++ b/blender.html
@@ -70,7 +70,7 @@
                     <h1 class="intro__title">КАРТИНКУ</h1>
                 </div>
             </div>
-            <img src="images/%D0%B3%D0%BE%D1%82%D0%BE%D0%B2%D0%BE1.png" width="1200" height="720" alt=" ">
+            <img src="images/готово1.png" width="1200" height="720" alt=" ">
         </div>
     </section>
             
