--- a/text.html
+++ b/text.html
@@ -83,6 +83,11 @@
                             <img src="images/donw.png" width="40" height="40" alt=" ">
                         </a>
                     </div>
+                    <div class="social">
+                        <a class="social__link" href="document1.pdf" target="_blank">
+                            <img src="images/donw.png" width="40" height="40" alt=" ">
+                        </a>
+                    </div>
         </div>
     </section>
             
