--- a/text.html
+++ b/text.html
@@ -73,7 +73,7 @@
             
             <div class="intro__inner1">
                 <div class="intro__cont">
-                    <h2 class="intro__subtitle">Скачать можно архив с исходниками и pdf тут</h2>
+                    <h2 class="intro__subtitle">Скачать можно архив с исходниками и просмотреть pdf тут</h2>
                     <h1 class="intro__title"></h1>
                     <div class="intro__text"></div>
                 </div>
@@ -83,7 +83,7 @@
                             <img src="images/donw.png" width="40" height="40" alt=" ">
                         </a>
                         <a class="social__link" href="document1.pdf" target="_blank">
-                            <img src="images/donw.png" width="40" height="40" alt=" ">
+                            <img src="images/pdf.png" width="40" height="40" alt=" ">
                         </a>
                     </div>
         </div>
