--- a/text.html
+++ b/text.html
@@ -73,7 +73,7 @@
             
             <div class="intro__inner1">
                 <div class="intro__cont">
-                    <h2 class="intro__subtitle">Скачать можно архив с исходниками и просмотреть pdf тут</h2>
+                    <h2 class="intro__subtitle">Скачать архив с исходниками и просмотреть pdf можно здесь</h2>
                     <h1 class="intro__title"></h1>
                     <div class="intro__text"></div>
                 </div>
