--- a/task.html
+++ b/task.html
@@ -1026,7 +1026,7 @@ body .markdown-body {
 <p>В ходе выполнения лабораторных работ мы создадим и настроим подобную сетевую операционную систему на виртуальных машинах и запустим на ней тестовую вычислительную задачу.
 Каждая лабораторная работа основана на результате выполнения предыдущей, поэтому выполнять их необходимо строго последовательно. Финальный результат (готовый проект) достижим только при успешном выполнении всех лабораторных работ. Преподавателю сдаётся только финальный результат. Нет необходимости сдавать каждую лабораторную работу по отдельности.</p>
 <p>Далее по тексту лабораторные работы будут называться <em>шагами</em> по настройке операционной системы. Основная ОС, в которую Вы установите виртуальные машины будет называться <em>хост</em>, а сами виртуальные машины <em>гостевыми</em>.
- Для выполнения лабораторных работ необходимо воспользоваться файлом <a href="https://docs.google.com/spreadsheets/d/16siXB4LZIjx4c-xvgbLAFl3g6EuRg9Vd/edit?usp=sharing&ouid=105885501885249797354&rtpof=true&sd=true" rel="nofollow">Идентификаторы</a>. Если лабораторная работа выполнена по чужим индентификаторам, то она не засчитывается</p>
+ Для выполнения лабораторных работ необходимо воспользоваться файлом <a href="https://docs.google.com/spreadsheets/d/16siXB4LZIjx4c-xvgbLAFl3g6EuRg9Vd/edit?usp=sharing&ouid=105885501885249797354&rtpof=true&sd=true" rel="nofollow">Идентификаторы</a>. Если лабораторная работа выполнена по чужим индентификаторам, то она не учитывается в рейтинге выполнения работы.</p>
 <p><a id="user-content-Цель-работы"></a></p>
 <h2>
 <a id="user-content-цель-работы" class="anchor" href="#%D1%86%D0%B5%D0%BB%D1%8C-%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D1%8B" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Цель работы</h2>
