--- a/feb23.html
+++ b/feb23.html
@@ -14,8 +14,9 @@
         <img href = "#" src = https://kartinki.pics/uploads/posts/2022-12/thumbs/1670423235_2-kartinkin-net-p-kartinka-serdtse-v-rukakh-oboi-3.jpg>
       </div>
       <div class = content>
-        <h3>This is content</h3>
-        <p>DIn publishing and graphic design,           Lorem ipsum is a placeholder text               commonly used to demonstrate the visual         form of a document or a typeface without         relying on meaningful content.</p>
+        <h3>Центр обучения поздравляет тебя с 23 февраля!</h3>
+        <p>Какой-то текст про то, какой ты хороший
+        Забрать свой подарок ты сможешь по адресу ........... Номинал подарка 1000 рублей. Просто подойти на кассу, скажи, что ты Михаил и у тебя должен быть сертификат</p>
       </div>
     </div>    
   </div>
