--- a/feb23.html
+++ b/feb23.html
@@ -11,7 +11,7 @@
   <div class = container>
     <div class = card>
       <div class = image>
-        <img href = "#" src = https://kartinki.pics/uploads/posts/2022-12/thumbs/1670423235_2-kartinkin-net-p-kartinka-serdtse-v-rukakh-oboi-3.jpg>
+        <img href = "#" src = images/burg.png>
       </div>
       <div class = content>
         <h3>Центр обучения поздравляет тебя с 23 февраля!</h3>
