--- a/feb23.html
+++ b/feb23.html
@@ -11,12 +11,14 @@
   <div class = container>
     <div class = card>
       <div class = image>
-        <img href = "#" src = images/burg.png>
+        <img href = "#" src = images/burg1.png>
       </div>
       <div class = content>
-        <h3>Центр обучения поздравляет тебя с 23 февраля!</h3>
-        <p>Какой-то текст про то, какой ты хороший
-        Забрать свой подарок ты сможешь по адресу ........... Номинал подарка 1000 рублей. Просто подойти на кассу, скажи, что ты Михаил и у тебя должен быть сертификат</p>
+        <h3>Привет!</h3>
+        <p>Нам радостно, что ты в команде Центра обучения ИТ! Спасибо за твёрдую позицию и готовность справиться с любыми задачами. </p>
+           <p> Хотим поздравить тебя!</p>
+<p>Мы приготовили небольшой подарок: он ждёт тебя по адресу: улица Байкальская, 23/3. При оформлении заказа нужно будет сказать, что ты Михаил и на тебя есть сертификат.</p>
+          <h3>Папа любит мясо</h3> 
       </div>
     </div>    
   </div>
